--- a/android_client/res/values/strings.xml
+++ b/android_client/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="title_activity_account">账户信息</string>
     <string name="Trade">交易</string>
     <string name="StopTrade">停止交易</string>
+    <string name="title_activity_tradelist">交易提醒</string>
 
 </resources>
