--- a/Todo
+++ b/Todo
@@ -1,6 +1,5 @@
-[2016-08-18] 1) 实现：每次报单，交易，撤单均更新仓位信息
-             2) 测试：不同交易所的合约，是否margin，commission符合预期
-             3) 实现：支持用户回报tick或者不回报
-             4) 实现：支持用户可以选择直接自动交易还是发送交易提示
+[2016-08-18] 1) 实现：每次报单，交易，撤单均更新仓位信息 （未开始）
+             2) 测试：不同交易所的合约，是否margin，commission符合预期 （未开始）
+             3) 实现：支持用户回报tick或者不回报 （进行中）
+             4) 实现：支持用户可以选择直接自动交易还是发送交易提示 （进行中）
 
-         
