--- a/Todo
+++ b/Todo
@@ -1,8 +1,8 @@
-[2016-08-18] 1) 实现：每次报单，交易，撤单均更新仓位信息 （未开始）
+[2016-08-18] 1) 实现：每次报单，交易，撤单均更新仓位信息 （进行中）
              2) 测试：不同交易所的合约，是否margin，commission符合预期 （未开始）
              3) 实现：支持用户回报tick或者不回报 （完成）
              4) 实现：支持用户可以选择直接自动交易还是发送交易提示 （完成）
 
 [2016-08-25] 1) 动态更新持仓受益，用于止损和止盈。（进行中）
 
-[2016-08-26] 1) 处理PPMgr类的线程同步。
+[2016-08-26] 1) 处理PPMgr类的线程同步。(完成)
